--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+uniapp-exam/node_modules/
+
+# config
+config.js
 
 # TypeScript v1 declaration files
 typings/
